--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,37 @@
-@import-normalize; /* bring in normalize.css styles */
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    margin: 30px;
+    background-color: rgb(223, 226, 232);
+    font-family: sans-serif;
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-        monospace;
+img {
+    height: 150px;
+    border-radius: 100px;
+}
+
+.description {
+    text-align: center;
+    height: 300px;
+    width: 250px;
+    background-color: rgb(247, 247, 247);
+    padding: 15px;
+}
+
+.name {
+    font-weight: bold;
+    font-size: 20px;
+    color: rgb(16, 19, 25);
+    margin-bottom: 0px;
+}
+
+.tag {
+    font-size: 15px;
+    margin-top: 12px;
+    color: rgb(155, 159, 167);
+}
+
+.location {
+    font-size: 15px;
+    margin-top: 12px;
+    color: rgb(155, 159, 167);
 }
